--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -6,7 +6,6 @@
 
   display: flex;
   flex-direction: column;
-  /* // justify-content: center; */
   align-items: center;
 }
 
@@ -18,7 +17,8 @@ img {
 
 .wrapper {
   background-color: #fff;
-  height: 70%;
+  height: 100vh;
+  width: 700px;
   border-radius: 7.5px;
 }
 
@@ -28,16 +28,17 @@ h1 {
   margin: 2rem;
 }
 
-h4 {
+span.subtitle {
   margin: 0 0 0.4rem 0;
-  color: #586063;
+  color: #555758;
+  font-weight: bold;
+  font-family: "plexina-bold";
 }
 
 section {
   display: flex;
   flex-direction: column;
    align-items: center;
-   width: 50vw;
    position: relative;
    margin: 0 5rem;
 }
@@ -47,99 +48,118 @@ a.button {
   margin: 0.5rem;
   padding: 10px 3rem;
   width: 400px;
-  border-radius: 2px;
+  border-radius: 4px;
   color: #fff;
   font-family: "plexina-bold";
   text-align: center;
-  /* ${props => props.color && css`
-      background-color: ${props.color};
-  `} */
 }
 
 a.button.bg-red {
   background-color: #DE4C38 !important;
 }
 
+a.button.bg-blue {
+  background-color: #4267B2 !important;
+}
+
+a.button.bg-black {
+  background-color: #000000 !important;
+}
+
  a.button:hover {
-     opacity: 0.85;
-     cursor: pointer;
+  opacity: 0.85;
+  cursor: pointer;
 }
 
 svg {
   margin: 0 10px;
 }
 
+span.splitter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  position: relative;
+  margin: 1rem;
+  color: grey;
+  font-family: "plexina";
+}
 
+span.splitterLeft, span.splitterRight{
+  width: 200px;
+  height: 1px;
+  background-color: gray;
+  margin: 0 5rem;
+}
 
-/* // export const Submit = styled.a`
-//   cursor: pointer;
-//   text-decoration: none;
-//   margin: 0.5rem;
-//   padding: 10px 3rem;
-//   width: 400px;
-//   border-radius: 2px;
-//   color: #fff;
-//   font-family: "plexina-bold";
-//   text-align: center;
-//   ${props => props.color && css`
-//       background-color: ${props.color};
-//   `}
+form {
+  display: flex;
+  flex-direction: column;  
+  align-items: center;
+  justify-content: flex-end;
+  opacity: 1;
+  font-family: "plexina";
+}
 
-//   &:hover {
-//     opacity: 0.85;
-//   }
+label {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  margin: 0.5rem;
+}
 
-// `;
+label input {
+  width: 100%;
+  padding: 0.5rem;
+  border: none;
+  border-bottom: 1px solid #000;
+  background-color: #E7F0FE;
+  font-family: "plexina";
+}
 
-// export const Splitter = styled.span`
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   text-align: center;
-//   position: relative;
-//   margin: 1rem;
-//   &::before {
-//     content: "";
-//     position: absolute;
-//     top: 7.5px;
-//     left: 20%;
-//     width: 150px;
-//     height: 1px;
-//     background-color: #000;
-//   }
+label input:focus {
+  outline: none;
+}
 
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     top: 7.5px;
-//     right: 20%;
-//     width: 150px;
-//     height: 1px;
-//     background-color: #000;
-//   }
-// `;
+input.submit {
+  text-decoration: none;
+  margin: 1rem;
+  padding: 15px 5rem;
+  width: 400px;
+  border-radius: 4px;
+  color: #fff;
+  font-family: "plexina-bold";
+  text-align: center;
+  background-color:#E5A00D;
+  border: none;
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
 
-// export const Form = styled.div`
-//   display: flex;
-//   flex-direction: column;  
-//   align-items: center;
-//   justify-content: flex-end;
-// `;
+input.submit:hover {
+  opacity: 0.85;
+}
 
-// export const Input = styled.input`
-//   width: 100%;
-//   padding: 0.5rem;
-//   border: none;
-//   border-bottom: 1px solid #000;
-//   background-color: #E7F0FE;
-//   font-family: "plexina";
-//   &:focus {
-//     outline: none;
-//   }
-// `;
+div.signup, div.terms-of-service {
+  font-size: 0.9rem;
+  text-align: center;
+  color: #3f4245;
+  font-family: "plexina";
+  width: 70%;
+  margin: 2rem auto;
+}
 
-// export const InputBox = styled.div`
-//   width: 70%;
-//   margin: 0.7rem 0;
-// `; */
+div.signup a, div.terms-of-service a {
+  margin: 0 0.2rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: #3f4245; 
+  font-family: "plexina-bold";
+}
+
+div.signup a:hover, div.terms-of-service a:hover {
+  cursor: pointer;
+  opacity: 0.85;
+}
